그래프 필기 & 문제 정리 쪼금...

--- a/python-algorithm-interview/03_non-linear/12_graph/그래프_장현준.md
+++ b/python-algorithm-interview/03_non-linear/12_graph/그래프_장현준.md
@@ -120,3 +120,19 @@ CSP 문제들
     - 배낭 문제
     - 문자열 파싱
     - 조합 최적화 문제
+# 문제
+## 섬의 갯수 : DFS로 그래프 탐색
+- 동서남북이 연결된 그래프로 가정
+- 섬 하나를 빠짐없이 탐색 => DFS 활용
+- 탐색후 count += 1
+- 방문한 육지("1")를 "1"이 아닌것으로 바꾸기 => 가지치기
+- 별도의 행렬 생성할 필요 없는 문제 => 생성시 `공간 복잡도 O(n)`
+- 중첩함수 (Nested Function)
+    - 함수 내에 위치한 함수
+    - 부모 함수의 변수를 자유롭게 접근 가능
+    - 실무에서 활용 X, 단일 함수로 해결하는 코딩테스트에서 자주 활용
+    - 가변 객체인 경우
+        - append(), pop() 연산 조작 가능
+        - 단, 재할당(=)이 일어날 경우 참조 ID 변경되어 별도의 지역 변수로 선언되므로 주의
+## 전화번호문자조합 : 모든 조합 탐색
+- 빈 digits에 대한 예외 처리
